log
ma., 13 de may. de 2025 23:47:16: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
Wed, May 14, 2025  8:31:10 AM: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
cc1.exe: all warnings being treated as errors
883ac6b
Wed, May 14, 2025  8:31:20 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c63e83a
ju., 15 de may. de 2025 23:50:19: 
 tests:  5|3
total_score: 35/70
2ff6bf5
vi., 16 de may. de 2025  0:29:00: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
4db6c04
